[package]
name = "ws_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
tracing = "0.1.40"
headers = "0.4.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
dashmap = "5.5.3"
sid2 = "0.4.1"
